rm dist and fix nav z-index

--- a/src/main.less
+++ b/src/main.less
@@ -42,6 +42,7 @@ nav {
   bottom: 0;
   left: 0;
   width: 100%;
+  z-index: 2;
   a {
     padding: 10px;
     display: inline-block;
@@ -52,11 +53,8 @@ nav {
   }
 }
 
-.blocks-container {
-  margin: 0 auto;
-}
-
 .blocks {
+  margin: 0 auto;
   column-count: 8;
   column-gap: 1em;
   @media only screen and (max-width: 768px) {
